--- a/.gitattributes
+++ b/.gitattributes
@@ -3,4 +3,7 @@
 #
 # These are explicitly windows files and should use crlf
 *.bat           text eol=crlf
+docs/* linguist-documentation
+
+Editor/* linguist-documentation
 
