--- a/.gitattributes
+++ b/.gitattributes
@@ -2,5 +2,5 @@
 # https://help.github.com/articles/dealing-with-line-endings/
 #
 # These are explicitly windows files and should use crlf
-*.javascript linguist-detectable=false
+*.JavaScript linguist-detectable=false
 *.bat           text eol=crlf
